updated vddk, workflows, diagram

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
@@ -15,17 +15,25 @@ Currently, IMS supports only cold migration. Virtual machines are powered off gr
 
 The Infrastructure Migration Solution has 4 key phases:
 
-xref:Planning_the_migration[Planning the migration]::
-You assess your source and target environments to ensure that you have sufficient resources for migration. You may choose to schedule the migration in phases or to create migration groups in order to minimize the impact on your users.
+. Planning the migration (xref:Planning_the_migration[])
++
+* Assessing your source and target environments to ensure that you have sufficient resources for migration.
+* Creating a phased migration schedule or dividing the resources into migration groups to minimize the impact on your users
 
-xref:Preparing_the_migration_environment[Preparing the migration environment]::
-You configure your source and target environments for migration and install required packages.
+. Preparing the migration environment (xref:Preparing_the_migration_environment[])
++
+* Installing the required packages
+* Configuring the source and target environments for migration
 
-xref:Migrating_the_infrastructure[Migrating the infrastructure]::
-You map the resources of your source environment to your target environment. After creating an infrastructure mapping, you create and run a migration plan.
+. Migrating the infrastructure (xref:Migrating_the_infrastructure[])
++
+* Mapping the resources of the source environment to the target environment
+* Creating and running a migration plan
 
-Verifying the migration::
-The completed migration plan displays successfully migrated virtual machines. If errors appear, see xref:Troubleshooting[].
+. Verifying the migration
++
+* Ensuring that the completed migration plan displays successfully migrated virtual machines
+* Troubleshooting errors (xref:Troubleshooting[])
 
 include::modules/con_Vmware_to_rhv_workflow.adoc[leveloffset=+1]
 include::modules/con_Vmware_to_osp_workflow.adoc[leveloffset=+1]
