--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_osp_workflow.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_osp_workflow.adoc
@@ -14,9 +14,9 @@ image:vmware_to_osp_migration_workflow.png[]
 Source virtual machines must be powered on for migration.
 ====
 
-. The ESXi host fingerprint is captured for authentication during the virtual machine conversion process, if VDDK transformation is used.
+. If VDDK transformation is used, the ESXi host fingerprint is captured for authentication during the virtual machine conversion process.
 
-. Using the OpenStack Platform attributes defined for the target environment, CloudForms initiates communication with one or more conversion hosts. (A conversion host is an OpenStack Platform instance with `virt-v2v`, `virt-v2v-wrapper`, and `nbdkit` installed.)
+. Using the OpenStack Platform attributes defined for the target environment, CloudForms initiates communication with the conversion hosts. (A conversion host is an OpenStack Platform instance with `virt-v2v`, `virt-v2v-wrapper`, and `nbdkit` installed.)
 
 . The conversion host connects to the source datastore through the ESXi host, using `virt-v2v-wrapper`, and streams the disks to be converted to the target block storage, using `virt-v2v`. The conversion host creates volumes in the block storage, attaches them to itself, and converts the source disks.
 
@@ -24,4 +24,4 @@ Source virtual machines must be powered on for migration.
 
 . The disks mapped in the block storage are attached to the instance and the instance is powered on.
 
-The migration process is complete and its status is displayed in CloudForms.
+The migration process is complete and the migration plan's status is displayed in CloudForms.
