--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_rhv_workflow.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_rhv_workflow.adoc
@@ -9,9 +9,9 @@ image:vmware_to_rhv_migration_workflow.png[]
 
 . CloudForms uses the migration plan to locate the virtual machines to be migrated.
 
-. The ESXi host fingerprint is captured for authentication during the virtual machine conversion process, if VDDK transformation is used.
+. If VDDK transformation is used, the ESXi host fingerprint is captured for authentication during the virtual machine conversion process.
 
-. Using the Red Hat Virtualization attributes defined for the target environment, CloudForms initiates communication with one or more conversion hosts.
+. Using the Red Hat Virtualization attributes defined for the target environment, CloudForms initiates communication with the conversion hosts.
 
 . The conversion host connects to the source datastore through the ESXi host, using `virt-v2v-wrapper`, streams the disks to be converted to the target data storage domain, using `virt-v2v`, and converts them.
 
@@ -24,4 +24,4 @@ Depending on the source virtual machine’s power state before migration, the vi
 
 . The converted disks are attached to the target virtual machine.
 
-The migration process is complete and its status is displayed in CloudForms.
+The migration process is complete and the migration plan's status is displayed in CloudForms.
