--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_rhv_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_rhv_target_environment.adoc
@@ -21,15 +21,15 @@ To prepare the Red Hat Virtualization environment for migration:
 +
 [NOTE]
 ====
-IMS only supports shared storage, such as NFS, iSCSI, or FCP. Local storage is not supported.
+IMS only supports shared storage such as NFS, iSCSI, or FCP. Local storage is not supported.
 ====
 
-. Upload the link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#Uploading_the_VirtIO_and_Guest_Tool_Image_Files_to_an_ISO_Storage_Domain[VirtIO and Guest Tool images] to the ISO storage domain. The VirtIO image file name must include the version number: `virtio-win-_version_.iso`.
+. Upload the link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#Uploading_the_VirtIO_and_Guest_Tool_Image_Files_to_an_ISO_Storage_Domain[VirtIO and Guest Tool images] to the ISO storage domain. The VirtIO image file name must include the version number: `virtio-win-_version_.iso`. The Guest Tool image is used to migrate Windows virtual machines.
 
 . Install link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html/installing_red_hat_cloudforms_on_red_hat_virtualization/[Red Hat CloudForms] 4.6.4 or later.
 
 . Add the link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#vmware_vcenter_providers[VMware] and link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#red_hat_virtualization_providers[Red Hat Virtualization] environments to CloudForms.
 
-. Create and configure the xref:Preparing_the_conversion_hosts[conversion hosts].
+. Create and configure the xref:Conversion_hosts[conversion hosts].
 
 . Authenticate the  link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#authenticating_rhv_hosts[conversion hosts].
