--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Migration.adoc
@@ -1,7 +1,7 @@
 [[Migrating_the_infrastructure]]
 = Migrating the infrastructure
 
-The migration phase has 2 main tasks:
+Migrating the infrastructure involves the following key tasks:
 
 * xref:Creating_an_Infrastructure_Mapping[Mapping the resources] (clusters, datastores, and networks) of your source environment to your target environment
 
