--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
@@ -1,13 +1,13 @@
 [id='Creating_and_running_a_migration_plan']
 = Creating and running a migration plan
 
-Creating and running a migration plan has the following steps and options:
+Creating and running a migration plan involves the following key tasks:
 
-. Select an infrastructure mapping.
-. Import the source virtual machines as a CSV file or select them manually from a list.
-. (OpenStack Platform only) Select a network and flavor for each virtual machine.
-. (Optional) Select pre- and post-migration Ansible playbooks to run on each virtual machine.
-. Run the migration plan immediately or in the future.
+. Selecting an infrastructure mapping
+. Importing the source virtual machines as a CSV file or selecting them manually from a list of virtual machines discovered by the migration plan
+. (OpenStack Platform only) Selecting a network and flavor for each virtual machine
+. (Optional) Creating pre- and post-migration Ansible playbooks to run on each virtual machine
+. Running the migration plan
 
 .Prerequisites
 
@@ -33,7 +33,7 @@ If you are migrating a small number of virtual machines, you do not need to crea
 
 .Procedure
 
-. Click menu:Compute[Migration > Overview].
+. Click menu:Compute[Migration > Migration Plans].
 +
 image:Migration_overview_screen.png[]
 
@@ -96,10 +96,10 @@ To view the migration progress of individual virtual machines, click *Migration 
 +
 [NOTE]
 ====
-The counter displaying the migration plan progress in menu:Compute[Migration > Overview] may be a few seconds ahead of the counter that appears in the migration plan details. This is because the migration plan overview counter displays the total time to run the migration plan, while the migration plan details counter displays the time to migrate the virtual machines.
+The counter displaying the migration plan progress in menu:Compute[Migration > Migration Plans] may be a few seconds ahead of the counter that appears in the migration plan details. This is because the migration plans counter displays the total time for running a migration plan, while the migration plan details counter displays the time for migrating the virtual machines.
 ====
 
-. When the migration plan has finished, check the status of the migration plan under *Migration Plans Complete*. The completed migration plan shows successfully migrated virtual machines. If error messages appear, see xref:Troubleshooting[].
+. When the migration plan has finished, click *Migration Plans Complete* to view the status of the migration plan. The completed migration plan shows successfully migrated virtual machines. If error messages appear, see xref:Troubleshooting[].
 
 [[Remigrating_Virtual_Machines]]
 .Remigrating virtual machines
