--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
@@ -15,24 +15,24 @@ Currently, IMS supports only cold migration. Virtual machines are powered off gr
 
 The Infrastructure Migration Solution has 4 key phases:
 
-. Planning the migration (xref:Planning_the_migration[])
+. Planning the migration (xref:Planning_the_migration[]):
 +
-* Assessing your source and target environments to ensure that you have sufficient resources for migration.
-* Creating a phased migration schedule or dividing the resources into migration groups to minimize the impact on your users
+* Assessing the source and target environments to ensure sufficient resources for migration
+* Formulating strategies to minimize the impact on users
 
-. Preparing the migration environment (xref:Preparing_the_migration_environment[])
+. Preparing for migration (xref:Preparing_the_migration_environment[]):
 +
-* Installing the required packages
-* Configuring the source and target environments for migration
+* Configuring the source and target environments
+* Creating and configuring the conversion hosts
 
-. Migrating the infrastructure (xref:Migrating_the_infrastructure[])
+. Migrating the infrastructure (xref:Migrating_the_infrastructure[]):
 +
 * Mapping the resources of the source environment to the target environment
 * Creating and running a migration plan
 
-. Verifying the migration
+. Verifying the migration:
 +
-* Ensuring that the completed migration plan displays successfully migrated virtual machines
+* Ensuring that the completed migration plan was successful
 * Troubleshooting errors (xref:Troubleshooting[])
 
 include::modules/con_Vmware_to_rhv_workflow.adoc[leveloffset=+1]
