--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Preparation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Preparation.adoc
@@ -1,11 +1,11 @@
 [id="Preparing_the_migration_environment"]
 = Preparing the migration environment
 
-Preparing your environment for migration comprises the following tasks:
+Preparing the environment for migration involves the following key steps:
 
-* Preparing the xref:Preparing_the_vmware_source_environment[VMware environment]
-* Preparing the xref:Preparing_the_rhv_target_environment[Red Hat Virtualization] or xref:Preparing_the_osp_target_environment[Red Hat OpenStack Platform] environment
-* Creating and configuring the xref:Conversion_hosts[conversion hosts].
+* Preparing the xref:Preparing_the_vmware_source_environment[source environment]
+* Preparing the target (xref:Preparing_the_rhv_target_environment[Red Hat Virtualization] or xref:Preparing_the_osp_target_environment[Red Hat OpenStack Platform]) environment
+* Creating and configuring the xref:Conversion_hosts[conversion hosts]
 
 include::modules/proc_Preparing_the_vmware_source_environment.adoc[leveloffset=+1]
 include::modules/proc_Preparing_the_rhv_target_environment.adoc[leveloffset=+1]
