--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Canceling_a_migration_plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Canceling_a_migration_plan.adoc
@@ -4,7 +4,7 @@
 
 You can cancel a migration plan that has started:
 
-. In menu:Compute[Migration > Overview], click *Migration Plans in Progress*.
+. In menu:Compute[Migration > Migration Plans], click *Migration Plans in Progress*.
 . Select a migration plan and click *Cancel Migration*.
 . Click *Cancel Migrations* to confirm the cancellation. The canceled migration appears in *Migration Plans Complete* with a red `x` indicating that the plan did not complete successfully.
 
