--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Best_practices_for_migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Best_practices_for_migration.adoc
@@ -33,10 +33,4 @@
 
 * Prepare your users for downtime.
 
-* For Red Hat Virtualization:
-
-** Run the xref:Ims_rhel_pre-migration_ansible_playbook_example[IMS RHEL pre-migration Ansible playbook] to preserve static IP address configuration and to install the RHV guest agent. See xref:Automating_pre_and_post_migration_tasks_with_ansible[] for more information.
-
-** Configure the conversion hosts on physical machines, not nested virtual machines.
-
-* For OpenStack Platform, deploy the conversion hosts on a compute node with nested virtualization enabled for best performance.
+* If you are migrating to Red Hat Virtualization, run the xref:Ims_rhel_pre-migration_ansible_playbook_example[IMS RHEL pre-migration Ansible playbook] to preserve static IP address configuration and to install the RHV guest agent. See xref:Automating_pre_and_post_migration_tasks_with_ansible[] for more information.
