--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Ims_rhel_pre-migration_ansible_playbook_example.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Ims_rhel_pre-migration_ansible_playbook_example.adoc
@@ -1,5 +1,5 @@
 [id="Ims_rhel_pre-migration_ansible_playbook_example"]
-.IMS RHEL pre-migration Ansible playbook example
+= IMS RHEL pre-migration Ansible playbook example
 
 The link:https://galaxy.ansible.com/fdupont_redhat/ims_rhel_pre_migration[`ims.rhel_pre_migration`] role performs the following tasks to configure a target Red Hat Enterprise Linux virtual machine:
 
