--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_for_ssh_transformation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_for_ssh_transformation.adoc
@@ -5,7 +5,7 @@ You can configure the conversion hosts for SSH transformation by running a playb
 
 Perform the following procedure on the Manager machine, for Red Hat Virtualization, or on each conversion host, for OpenStack Platform:
 
-. Create an inventory file, +/usr/share/ovirt-ansible-v2v-conversion-host-_version_/playbooks/conversion_hosts_inventory.yml+, with the following variables:
+. Create an inventory file, +/usr/share/ovirt-ansible-v2v-conversion-host-_version_/playbooks/conversion_hosts_inventory.yml+, with the following variables (for more options, see xref:Ansible_conversion_hosts_inventory_file_example[]):
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
