--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
@@ -13,6 +13,8 @@ To prepare the OpenStack Platform environment for migration:
 
 . Create a project for the conversion hosts and whatever projects you require for the target instances.
 
+. Ensure that the link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/storage_guide/#section-volumes-advanced-vol-type[`volume type`] of the target block storage is set. Otherwise, the storage does not appear in CloudForms when you create an infrastructure mapping.
+
 . Ensure that the user configured in CloudForms for the OpenStack Platform provider has `administrator` privileges on the target projects.
 
 . Configure security groups:
