SME update volume type setting

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Troubleshooting.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Troubleshooting.adoc
@@ -44,7 +44,7 @@ image:Migrated_VM_details.png[]
 
 .OpenStack Platform only
 
-*Storage not detected.* If the target block storage does not appear while you are creating an infrastructure mapping, set the link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/storage_guide/#section-volume-retype[`volume type`] of the storage.
+*Storage not detected.* If the target block storage does not appear while you are creating an infrastructure mapping, check that you have   link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/storage_guide/#section-volumes-advanced-vol-type[set at least one `volume type`] for the storage.
 
 === Migration plan errors
 
